# network_firewall

./: .gitignore  .pdm-python  README.md  RUNNING_TESTS.md  main.py  pyproject.toml  rules.yaml  test.py
docs/: 1.system_overall_architecture_diagram.py  2.system_data_flow_diagram.py  3.packet_capture_protocol_filter_flowchart.py  firewall_packet_flow  firewall_system_architecture  packet_flow_diagram.py  system_architecture_diagram.py  system_overall_architecture.dot
firewall/: __init__.py  config.py  constants.py
firewall/core/: firewall.py  packet_analyzer.py  packet_filter.py  packet_interceptor.py  packet_processor.py  rule_manager.py
firewall/core/rules/: __init__.py  rule_storage.py  rule_validator.py
firewall/resources/: __init__.py
firewall/ui/: __init__.py  main_window.py  ui_utils.py
firewall/ui/tabs/: __init__.py  advanced_settings_tab.py  content_filter_tab.py  ip_filter_tab.py  log_tab.py  performance_tab.py  port_filter_tab.py  traffic_monitor_tab.py
firewall/utils/: __init__.py  logging_utils.py  network_utils.py  performance_utils.py
tests/: conftest.py  test_content_filtering.py  test_ip_filtering.py  test_port_filtering.py  test_protocol_filtering.py  test_ui_interaction.py
tests/helpers/: log_parser.py  network_helper.py  rule_helper.py
